solved input box covering all the space

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -4,6 +4,50 @@
   box-sizing: border-box;
 }
 
+.text--white {
+  color: white;
+}
+
+.btn--red {
+  background-color: red;
+}
+
+.btn--yellow {
+  background-color: yellow;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.mr-1 {
+  margin-right: 20px;
+}
+
+.mt-1 {
+  margin-top: 30px;
+}
+
+.mt-2 {
+  margin-top: 20px;
+}
+
+.mt-3 {
+  margin-top: 10px;
+}
+
+.mb-1 {
+  margin-bottom: 30px;
+}
+
+.mb-2 {
+  margin-bottom: 20px;
+}
+
+.mb-3 {
+  margin-bottom: 10px;
+}
+
 body {
   padding: 12px;
 }
@@ -90,78 +134,57 @@ main {
   padding: 0 0 0 12px;
   margin-left: 12px;
 }
-
-/* Utility Classes */
-.text--white {
-  color: white;
+main .stacked__container {
+  display: flex;
+  background-color: blue;
 }
-
-.btn--red {
+main .left-part {
+  flex-basis: 100%;
   background-color: red;
 }
-
-.btn--yellow {
-  background-color: yellow;
+main .right-part {
+  background-color: pink;
+  flex-basis: 100%;
 }
 
-.mr-1 {
-  margin-right: 20px;
-}
-
-.mt-1 {
-  margin-top: 30px;
-}
-
-.mt-2 {
-  margin-top: 20px;
-}
-
-.mt-3 {
-  margin-top: 10px;
-}
-
-.mb-1 {
-  margin-bottom: 30px;
-}
-
-.mb-2 {
-  margin-bottom: 20px;
-}
-
-.mb-3 {
-  margin-bottom: 10px;
-}
-
+/* Utility Classes */
 .search {
   display: flex;
+  background-color: aqua;
   align-items: center;
 }
 .search__input {
-  width: 50%;
   height: 30px;
   border: none;
-  background-color: white;
   font-family: inherit;
   border: 1px solid red;
   padding-left: 12px;
+  background-color: white;
+  position: relative;
+  flex-grow: 1;
 }
 .search__input:focus {
   outline: none;
 }
 .search__button {
-  border: none;
-  transform: translate(-80px, 2px);
+  position: absolute;
+  left: 44%;
+  display: flex;
+  align-items: center;
   background-color: white;
+  padding-right: -30px;
+  border: none;
 }
 .search__icon {
-  height: 20px;
-  width: 30px;
+  height: 25px;
+  width: 25px;
   fill: red;
 }
 
 .expand__icon {
   height: 20px;
   width: 30px;
+  fill: red;
 }
 
 .photography--studio {
@@ -174,7 +197,6 @@ main {
 }
 
 .features {
-  width: 50%;
   display: flex;
   background-color: red;
   padding-left: 24px;
