--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,8 @@
 
 @use "../Abstract/mixins";
 
+@use "../Utility/utility";
+
 body {
   padding: 12px;
 }
@@ -75,14 +77,6 @@ body {
 
 .all--category {
   text-decoration: none;
-  //   background-color: blue;
-  //   @include mixins.btnStyle(
-  //     $padding-left: 2rem,
-  //     $padding-top: 1rem,
-  //     $padding-right: 2rem,
-  //     $padding-bottom: 1rem,
-  //     $disp: inline-block
-  //   );
 }
 
 .package--ultra,
@@ -95,71 +89,48 @@ body {
 main {
   padding: 0 0 0 12px;
   margin-left: 12px;
+  // position: relative;
+
+  .stacked__container {
+    display: flex;
+
+    background-color: blue;
+  }
+
+  .left-part {
+    // background-color: red;
+    flex-basis: 100%;
+    background-color: red;
+    // flex-grow: 1;
+  }
+  .right-part {
+    // background-color: blue;
+    background-color: pink;
+    flex-basis: 100%;
+  }
 }
 
 /* Utility Classes */
-.text--white {
-  color: white;
-}
-
-.btn--red {
-  background-color: red;
-}
-
-.btn--yellow {
-  background-color: yellow;
-}
-
-.mr-1 {
-  margin-right: 20px;
-}
-
-.mt-1 {
-  margin-top: 30px;
-}
-
-.mt-2 {
-  margin-top: 20px;
-}
-
-.mt-3 {
-  margin-top: 10px;
-}
-
-.mb-1 {
-  margin-bottom: 30px;
-}
-
-.mb-2 {
-  margin-bottom: 20px;
-}
-
-.mb-3 {
-  margin-bottom: 10px;
-}
 
 .search {
-  //   display: flex;
-  //   background-color: red;
-  //   display: flex;
-  //   justify-content: space-around;
   display: flex;
-
+  background-color: aqua;
   align-items: center;
-  //   background-color: red;
+  // position: relative;
+  // margin-bottom: 8px;
 
   &__input {
-    width: 50%;
     height: 30px;
-    // border: none;
     border: none;
-    background-color: white;
     font-family: inherit;
     border: 1px solid red;
-    // padding: 12px;
-    // outline: none;
-    // border: none;
     padding-left: 12px;
+    background-color: white;
+    position: relative;
+
+    flex-grow: 1;
+
+    // background-color: aquamarine;
 
     &:focus {
       outline: none;
@@ -167,19 +138,21 @@ main {
   }
 
   &__button {
-    border: none;
-    transform: translate(-80px, 2px);
+    position: absolute;
+    left: 44%;
+    // left: 400px;
 
+    display: flex;
+    align-items: center;
     background-color: white;
-    // border: none;
-    // width: 50px;
-    // background-color: grey;
+    padding-right: -30px;
+    border: none;
+    // background-color: white;
   }
 
   &__icon {
-    height: 20px;
-    width: 30px;
-    // fill: white;
+    height: 25px;
+    width: 25px;
     fill: red;
   }
 }
@@ -187,6 +160,7 @@ main {
 .expand__icon {
   height: 20px;
   width: 30px;
+  fill: red;
 }
 
 .photography--studio {
@@ -199,12 +173,11 @@ main {
 }
 
 .features {
-  //   background-color: red;
-  width: 50%;
   display: flex;
   background-color: red;
   padding-left: 24px;
   justify-content: space-between;
+  // justify-content: space-between;
   .feature {
     text-decoration: none;
     background-color: blue;
